tests/errors/pre_asm/mcr_name_expected/mcr_expected.as
; macro name expected error
mcr

endmcr

STRING: .str "hi"
